--- a/styles/app.css
+++ b/styles/app.css
@@ -444,6 +444,60 @@ video {
   display: none;
 }
 
+@font-face {
+  font-family: "Dana";
+
+  /* 400 */
+
+  src: local("Dana"), url("./../fonts/Dana/woff2/DanaFaNum-Regular.woff2") format("woff2");
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Dana Medium";
+
+  /* 500 */
+
+  src: local("Dana Medium"), url("./../fonts/Dana/woff2/DanaFaNum-Medium.woff2") format("woff2");
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Dana DemiBold";
+
+  /* 600 */
+
+  src: local("Dana DemiBold"), url("./../fonts/Dana/woff2/DanaFaNum-DemiBold.woff2") format("woff2");
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Morabba Light";
+
+  src: local("Morabba Light"), url("./../fonts/Morabba/woff2/Morabba-Light.woff2") format("woff2");
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Morabba Medium";
+
+  src: local("Morabba Medium"), url("./../fonts/Morabba/woff2/Morabba-Medium.woff2") format("woff2");
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Morabba Bold";
+
+  src: local("Morabba Bold"), url("./../fonts/Morabba/woff2/Morabba-Bold.woff2") format("woff2");
+
+  font-display: swap;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -544,6 +598,34 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-52 {
+  right: 13rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-full {
+  top: 100%;
+}
+
 .mx-12 {
   margin-left: 3rem;
   margin-right: 3rem;
@@ -554,11 +636,6 @@ video {
   margin-right: 1rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -567,6 +644,18 @@ video {
 .my-1\.5 {
   margin-top: 0.375rem;
   margin-bottom: 0.375rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-1\.5 {
+  margin-right: 0.375rem;
 }
 
 .mr-4 {
@@ -581,22 +670,6 @@ video {
   margin-top: 0.375rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.mr-1\.5 {
-  margin-right: 0.375rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .flex {
   display: flex;
 }
@@ -605,12 +678,24 @@ video {
   display: none;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
 
 .h-24 {
   height: 6rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -633,20 +718,28 @@ video {
   height: 100%;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .w-36 {
   width: 9rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-56 {
+  width: 14rem;
 }
 
 .w-6 {
@@ -661,38 +754,28 @@ video {
   width: 2rem;
 }
 
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[37\.5\%\] {
+  width: 37.5%;
+}
+
+.w-\[800px\] {
+  width: 800px;
+}
+
 .w-full {
   width: 100%;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.border-spacing-1 {
-  --tw-border-spacing-x: 0.25rem;
-  --tw-border-spacing-y: 0.25rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
 .items-center {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-5 {
-  gap: 1.25rem;
 }
 
 .gap-10 {
@@ -703,28 +786,21 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.border {
-  border-width: 1px;
-}
-
-.border-4 {
-  border-width: 4px;
-}
-
 .border-2 {
   border-width: 2px;
+}
+
+.bg-\[\#066ac91a\] {
+  background-color: #066ac91a;
+}
+
+.bg-\[\#0f0f10\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 15 16 / var(--tw-bg-opacity));
 }
 
 .bg-darkblue {
@@ -732,38 +808,17 @@ video {
   background-color: rgb(34 37 41 / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#0\] {
-  background-color: #0;
-}
-
-.bg-\[\#066a\] {
-  background-color: #066a;
-}
-
-.bg-\[\#066ac91a\] {
-  background-color: #066ac91a;
-}
-
-.bg-\[\#066ac9\] {
+.bg-red-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(6 106 201 / var(--tw-bg-opacity));
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .fill-white {
   fill: #fff;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-2 {
@@ -771,23 +826,36 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .font-bold {
   font-weight: 700;
+}
+
+.text-\[\#c5c6cc\] {
+  --tw-text-opacity: 1;
+  color: rgb(197 198 204 / var(--tw-text-opacity));
 }
 
 .text-active {
@@ -795,20 +863,47 @@ video {
   color: rgb(6 106 201 / var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.opacity-0 {
+  opacity: 0;
 }
 
-.text-\[\#\] {
-  color: #;
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-.text-\[\#c5c6cc\] {
-  --tw-text-opacity: 1;
-  color: rgb(197 198 204 / var(--tw-text-opacity));
+.delay-75 {
+  transition-delay: 75ms;
+}
+
+.\*\:py-1 > * {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.group\/edit:hover .group-hover\/edit\:visible {
+  visibility: visible;
+}
+
+.group:hover .group-hover\:visible {
+  visibility: visible;
+}
+
+.group\/edit:hover .group-hover\/edit\:opacity-100 {
+  opacity: 1;
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
 }
