--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-color: #222529;
     padding: 0;
     margin: 0;
@@ -14,4 +14,4 @@ a {
 
 .hidden {
     display: none;
-}
+} */
