--- a/src/input.css
+++ b/src/input.css
@@ -42,3 +42,13 @@
         font-display: swap;
     }
 }
+
+@layer components {
+    .advertisement {
+        background-image: url("./../images/05.png");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: rgba(6, 106, 201, 0.5);
+    }
+}
