--- a/styles/app.css
+++ b/styles/app.css
@@ -606,6 +606,19 @@ video {
   background-color: rgba(6, 106, 201, 0.5);
 }
 
+/* .group:hover .group-hover\:visible {
+        visibility: visible;
+        opacity: 1;
+    } */
+
+/* .group2:hover .group2-hover\:visible {
+        visibility: visible;
+    }
+
+    .group2:hover .group2-hover\:opacity-100 {
+        opacity: 1;
+    } */
+
 .invisible {
   visibility: hidden;
 }
@@ -622,6 +635,10 @@ video {
   right: 0px;
 }
 
+.right-48 {
+  right: 12rem;
+}
+
 .right-52 {
   right: 13rem;
 }
@@ -634,8 +651,28 @@ video {
   top: 100%;
 }
 
-.-z-50 {
-  z-index: -50;
+.right-\[204px\] {
+  right: 204px;
+}
+
+.right-\[\] {
+  right: ;
+}
+
+.right-\[208px\] {
+  right: 208px;
+}
+
+.right-\[220px\] {
+  right: 220px;
+}
+
+.right-56 {
+  right: 14rem;
+}
+
+.right-\[200px\] {
+  right: 200px;
 }
 
 .mx-12 {
@@ -845,28 +882,21 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .fill-white {
   fill: #fff;
 }
 
-.p-7 {
-  padding: 1.75rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-2 {
@@ -879,6 +909,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -889,14 +924,14 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-7 {
@@ -954,7 +989,20 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.hover\:text-active:hover {
+  --tw-text-opacity: 1;
+  color: rgb(6 106 201 / var(--tw-text-opacity));
+}
+
+.group\/dropdown:hover .group-hover\/dropdown\:visible {
+  visibility: visible;
+}
+
 .group\/edit:hover .group-hover\/edit\:visible {
+  visibility: visible;
+}
+
+.group\/submenu:hover .group-hover\/submenu\:visible {
   visibility: visible;
 }
 
@@ -962,10 +1010,54 @@ video {
   visibility: visible;
 }
 
+.group\/dropdown:hover .group-hover\/dropdown\:opacity-100 {
+  opacity: 1;
+}
+
 .group\/edit:hover .group-hover\/edit\:opacity-100 {
+  opacity: 1;
+}
+
+.group\/submenu:hover .group-hover\/submenu\:opacity-100 {
   opacity: 1;
 }
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
+}
+
+.child\:pr-2 > * {
+  padding-right: 0.5rem;
+}
+
+.child\:transition-colors > * {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.child-hover\:rounded-lg > *:hover {
+  border-radius: 0.5rem;
+}
+
+.child-hover\:rounded-md > *:hover {
+  border-radius: 0.375rem;
+}
+
+.child-hover\:rounded-sm > *:hover {
+  border-radius: 0.125rem;
+}
+
+.child-hover\:bg-active > *:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 106 201 / var(--tw-bg-opacity));
+}
+
+.child-hover\:bg-\[\#066ac91a\] > *:hover {
+  background-color: #066ac91a;
+}
+
+.child-hover\:text-active > *:hover {
+  --tw-text-opacity: 1;
+  color: rgb(6 106 201 / var(--tw-text-opacity));
 }
